addons/registry/manifests/ingress-traefik/registry-ingress-traefik.yaml
# SPDX-FileCopyrightText: © 2023 Siemens Healthcare GmbH
#
# SPDX-License-Identifier: MIT

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: registry-traefik-local
  namespace: registry
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`k2s.registry.local`)
      kind: Rule
      services:
        - name: registry
          namespace: registry
          port: 5000
